# G1_Hybrid_Graduation

./: .gitignore  Makefile  README.md  __init__.py  cli.py  environment.yml  path_utils.py  pyproject.toml  registry_manager.py  requirements-algorithms.txt  requirements.txt  workflow_runner.py
.github/workflows/: ci.yml
G1_Hybrid_Graduation_Project/: __init__.py  registry_manager.py  workflow_runner.py
G1_Hybrid_Graduation_Project/contracts/: joint_contract.py  motion_asset_contract.py  policy_contract.py
G1_Hybrid_Graduation_Project/pipelines/: export_policy_bundle.py  validate_deploy_handoff.py
G1_Hybrid_Graduation_Project/registry/: policy_registry.yaml
G1_Hybrid_Graduation_Project/scripts/: register_example_assets.py
adapters/: __init__.py
adapters/base/: README.md  __init__.py  wrapper.py
adapters/gvhmr2pbhc/: README.md  __init__.py  wrapper.py
adapters/mjlab/: README.md  __init__.py  wrapper.py
adapters/motion/: README.md  __init__.py  wrapper.py
adapters/pbhc/: README.md  __init__.py  wrapper.py
adapters/skill/: README.md  __init__.py  wrapper.py
configs/: g1_23dof.yaml  runtime.example.env
configs/assets/: example_motion_asset.yaml
configs/deploy/: example_deploy_handoff.yaml
configs/policies/: example_policy_bundle.yaml  example_skill_policy_bundle.yaml
configs/tasks/: example_base_velocity_task.yaml  example_skill_tracking_task.yaml
configs/workflows/: example_orchestration.yaml  example_training.yaml
contracts/: __init__.py  deploy_contract.py
docs/: architecture.md  deployment.md  installation.md  simulation.md  third_party.md  training.md
docs/architecture/: system_architecture.md
docs/handoff/: deploy_handoff.md
engines/: __init__.py
motion_pipeline/: pipeline.py
pipelines/: __init__.py  build_motion_asset.py  export_policy_bundle.py  process_motion_asset.py  train_base_policy.py  train_skill_policy.py  validate_deploy_handoff.py
registry/: motion_registry.yaml  policy_registry.yaml  task_registry.yaml
scripts/: register_example_assets.py  run_acceptance.py  show_project_status.py
tests/: __init__.py  test_cli_smoke.py  test_registry_manager.py
(+74 files in other folders)
