[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "g1-hybrid-graduation"
version = "0.1.0"
description = "G1 混合式动作策略工程主仓"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.21",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
g1-hybrid = "cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["adapters*", "contracts*", "pipelines*", "tests*"]
