[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "g1-hybrid"
version = "0.1.0"
description = "G1 23DoF reinforcement learning training and MuJoCo simulation project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
algorithms = [
  "mjlab==1.2.0",
  "tyro",
  "hydra-core>=1.2.0",
  "omegaconf",
  "torch",
  "mujoco==3.2.3",
  "rich",
  "scipy",
  "tensorboard",
  "onnx",
  "onnxruntime",
  "joblib",
]

[project.scripts]
g1-hybrid = "cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["engines*", "tests*"]
